// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paragraph large size colored renders correctly 1`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  line-height: 20px;
  color: red;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;

exports[`Paragraph large size renders correctly 1`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;

exports[`Paragraph large size strong renders correctly 1`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  line-height: 20px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  <strong>
    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
  </strong>
</p>
`;

exports[`Paragraph large size uppercase renders correctly 1`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  line-height: 20px;
  text-transform: uppercase;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;

exports[`Paragraph large size with custom margin renders correctly 1`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  font-size: 16px;
  line-height: 24px;
  margin: 12px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;

exports[`Paragraph large size with custom margin renders correctly 2`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  font-size: 16px;
  line-height: 24px;
  margin: 12px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;

exports[`Paragraph large size with custom margin renders correctly 3`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  font-size: 16px;
  line-height: 24px;
  margin-top: 16px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;

exports[`Paragraph large size with custom margin renders correctly 4`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  font-size: 16px;
  line-height: 24px;
  margin-top: 16px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;

exports[`Paragraph large size with custom margin renders correctly 5`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  font-size: 16px;
  line-height: 24px;
  margin-right: 16px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;

exports[`Paragraph large size with custom margin renders correctly 6`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  font-size: 16px;
  line-height: 24px;
  margin-right: 16px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;

exports[`Paragraph large size with custom margin renders correctly 7`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 16px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;

exports[`Paragraph large size with custom margin renders correctly 8`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 16px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;

exports[`Paragraph large size with custom margin renders correctly 9`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  font-size: 16px;
  line-height: 24px;
  margin-left: 16px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;

exports[`Paragraph large size with custom margin renders correctly 10`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  font-size: 16px;
  line-height: 24px;
  margin-left: 16px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;

exports[`Paragraph medium size colored renders correctly 1`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  line-height: 20px;
  color: red;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;

exports[`Paragraph medium size renders correctly 1`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  line-height: 20px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;

exports[`Paragraph medium size strong renders correctly 1`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  line-height: 20px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  <strong>
    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
  </strong>
</p>
`;

exports[`Paragraph medium size uppercase renders correctly 1`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  line-height: 20px;
  text-transform: uppercase;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;

exports[`Paragraph medium size with custom margin renders correctly 1`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  line-height: 20px;
  margin: 12px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;

exports[`Paragraph medium size with custom margin renders correctly 2`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  line-height: 20px;
  margin: 12px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;

exports[`Paragraph medium size with custom margin renders correctly 3`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  line-height: 20px;
  margin-top: 16px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;

exports[`Paragraph medium size with custom margin renders correctly 4`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  line-height: 20px;
  margin-top: 16px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;

exports[`Paragraph medium size with custom margin renders correctly 5`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  line-height: 20px;
  margin-right: 16px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;

exports[`Paragraph medium size with custom margin renders correctly 6`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  line-height: 20px;
  margin-right: 16px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;

exports[`Paragraph medium size with custom margin renders correctly 7`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  line-height: 20px;
  margin-bottom: 16px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;

exports[`Paragraph medium size with custom margin renders correctly 8`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  line-height: 20px;
  margin-bottom: 16px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;

exports[`Paragraph medium size with custom margin renders correctly 9`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  line-height: 20px;
  margin-left: 16px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;

exports[`Paragraph medium size with custom margin renders correctly 10`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  line-height: 20px;
  margin-left: 16px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;

exports[`Paragraph small size colored renders correctly 1`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  line-height: 20px;
  color: red;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;

exports[`Paragraph small size renders correctly 1`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  font-size: 12px;
  line-height: 16px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;

exports[`Paragraph small size strong renders correctly 1`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  line-height: 20px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  <strong>
    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
  </strong>
</p>
`;

exports[`Paragraph small size uppercase renders correctly 1`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  line-height: 20px;
  text-transform: uppercase;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;

exports[`Paragraph small size with custom margin renders correctly 1`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  font-size: 12px;
  line-height: 16px;
  margin: 12px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;

exports[`Paragraph small size with custom margin renders correctly 2`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  font-size: 12px;
  line-height: 16px;
  margin: 12px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;

exports[`Paragraph small size with custom margin renders correctly 3`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  font-size: 12px;
  line-height: 16px;
  margin-top: 16px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;

exports[`Paragraph small size with custom margin renders correctly 4`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  font-size: 12px;
  line-height: 16px;
  margin-top: 16px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;

exports[`Paragraph small size with custom margin renders correctly 5`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  font-size: 12px;
  line-height: 16px;
  margin-right: 16px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;

exports[`Paragraph small size with custom margin renders correctly 6`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  font-size: 12px;
  line-height: 16px;
  margin-right: 16px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;

exports[`Paragraph small size with custom margin renders correctly 7`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  font-size: 12px;
  line-height: 16px;
  margin-bottom: 16px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;

exports[`Paragraph small size with custom margin renders correctly 8`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  font-size: 12px;
  line-height: 16px;
  margin-bottom: 16px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;

exports[`Paragraph small size with custom margin renders correctly 9`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  font-size: 12px;
  line-height: 16px;
  margin-left: 16px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;

exports[`Paragraph small size with custom margin renders correctly 10`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  font-size: 12px;
  line-height: 16px;
  margin-left: 16px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;

exports[`Paragraph xs size colored renders correctly 1`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  line-height: 20px;
  color: red;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;

exports[`Paragraph xs size renders correctly 1`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  font-size: 10px;
  line-height: 16px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;

exports[`Paragraph xs size strong renders correctly 1`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  line-height: 20px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  <strong>
    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
  </strong>
</p>
`;

exports[`Paragraph xs size uppercase renders correctly 1`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  line-height: 20px;
  text-transform: uppercase;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;

exports[`Paragraph xs size with custom margin renders correctly 1`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  font-size: 10px;
  line-height: 16px;
  margin: 12px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;

exports[`Paragraph xs size with custom margin renders correctly 2`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  font-size: 10px;
  line-height: 16px;
  margin: 12px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;

exports[`Paragraph xs size with custom margin renders correctly 3`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  font-size: 10px;
  line-height: 16px;
  margin-top: 16px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;

exports[`Paragraph xs size with custom margin renders correctly 4`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  font-size: 10px;
  line-height: 16px;
  margin-top: 16px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;

exports[`Paragraph xs size with custom margin renders correctly 5`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  font-size: 10px;
  line-height: 16px;
  margin-right: 16px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;

exports[`Paragraph xs size with custom margin renders correctly 6`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  font-size: 10px;
  line-height: 16px;
  margin-right: 16px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;

exports[`Paragraph xs size with custom margin renders correctly 7`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  font-size: 10px;
  line-height: 16px;
  margin-bottom: 16px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;

exports[`Paragraph xs size with custom margin renders correctly 8`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  font-size: 10px;
  line-height: 16px;
  margin-bottom: 16px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;

exports[`Paragraph xs size with custom margin renders correctly 9`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  font-size: 10px;
  line-height: 16px;
  margin-left: 16px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;

exports[`Paragraph xs size with custom margin renders correctly 10`] = `
.c0.rovna-ui-typography {
  margin-top: 0px;
  font-size: 10px;
  line-height: 16px;
  margin-left: 16px;
  font-weight: 400;
}

<p
  className="rovna-ui-typography c0 rovna-ui-typography-paragraph css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-paragraph"
  style={
    {
      "WebkitLineClamp": undefined,
    }
  }
>
  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, sequi?
</p>
`;
